grammar.js
    module: $ => repeat($._stmt),

    _stmt: $ => choice(
      $._simple_stmts,
      $._compound_stmt,
    ),

    // Simple statements

    import_prefix: _ => repeat1('.'),

    if_stmt: $ => choice(
      seq(
        'if',
        field('condition', $._expr),
        ':',
        field('consequence', $._suite),
        repeat(field('alternative', $.elif_clause)),
        optional(field('alternative', $.else_clause)),
      ),
      seq(
        field('condition', $._expr),
        ',',
        field('error_message', $.string),
      ),
      $.if_expr,
      seq(
        field('expr1', $._expr),
        'if',
        field('condition', $._expr),
      )
    ),

    rule_stmt: $ => prec.left(seq(
      'rule',
      field('name', $.parameter),
      optional(seq(
        '(',
        commaSep1(field('base', $.identifier)),
        optional(','),
        ')'
      )),
      optional(seq(
        'for',
        field('protocol', $.identifier),
      )),
      ':',
      field('body', $._suite),
    )),

    elif_clause: $ => seq(
      'elif',
      field('condition', $._expr),
      ':',
      field('consequence', $._suite),
    ),

    else_clause: $ => seq(
      'else',
      ':',
      field('body', $._suite),
    ),

    schema_expr: $ => seq(
      field('operand_name', $.identifier),
      optional(seq(
        '(',
        optional($.argument_list),
        ')'
      )),
      $.config_expr,
    ),

    schema_instantiation: $ => seq(
      field('constructor', $.call_expr),
      field('initialization', $.config_expr)
    ),

    schema_index_signature: $ => seq(
      '[',
      optional(seq(
        field('attr_alias', $.identifier),
        ':'
      )),
      optional('...'),
      field('key_type', $.basic_type),
      ']',
      ':',
      field('value_type', $.type),
      optional(seq(
        '=',
        field('default', $._expr)
      )),
      $._newline
    ),

    quant_expr: $ => prec.left(seq(
      field('quant_op', $.quant_op),
      optional(seq(
        field('identifier', $.identifier),
        ','
      )),
      field('identifier', $.identifier),
      'in',
      field('quant_target', $.quant_target),
      '{',
      $._simple_expr,
      optional(seq(
        'if',
        field('expr2', $._expr)
      )),
      '}'
    )),

    quant_target: $ => prec(1, choice(
      $.subscript_expr,
      $.call_expr,
      field('config_or_list', $.identifier),
      $.string,
      $.list_expr,
      $.list_comprehension,
      $.config_expr,
      $.config_comprehension,
      seq(
        '[',
        field('integer', $.integer),
        repeat(seq(
          ',',
          field('integer', $.integer)
        )),
        ']'
      )
    )),

    quant_op: $ => choice(
      'all',
      'any',
      'filter',
      'map'
    ),

    schema_stmt: $ => prec.left(seq(
      'schema',
      field('name', $.parameter),
      optional(seq(
        '(',
        field('base', $.identifier),
        ')'
      )),
      optional(seq(
        'for',
        field('protocol', $.identifier),
      )),
      ':',
      field('body', $._suite),
    )),

    mixin_stmt: $ => seq(
      'mixin',
      field('name', $.primary_expr),
      optional(seq('for',
        field('protocol', $.identifier),
        ':',
        field('body', $._suite),
      ))),

    protocol_stmt: $ => seq(
      'protocol',
      field('name', $.identifier),
      ':',
      field('body', $._suite),
    ),

    check_stmt: $ => prec.left(seq(
      'check',
      ':',
      repeat1(seq(
        field('expr1', $._expr),
        optional(seq(
          ',',
          field('error_message', $.string),
        )),
      ),)
    )),

    // Arguments

    argument_list: $ => seq(
      '(',
      optional(commaSep1(
        choice(
          $._expr,
          $.keyword_argument,
        ),
      )),
      optional(','),
      ')',
    ),

    decorators: $ => seq(
      repeat1($.decorator),
      field('definition', choice(
        $.schema_stmt,
        $.mixin_stmt,
        $.rule_stmt,
        $.protocol_stmt,
      )),
    ),

    decorator: $ => seq(
      '@',
      $.identifier,
      optional($.argument_list),
      $._newline,
    ),

    _suite: $ => choice(
      alias($._simple_stmts, $.block),
      seq($._indent, $.block),
      seq($.assign_stmt, $._newline),
      seq($.comparison_expr, $._newline),
      alias($._newline, $.block),
    ),

    block: $ => seq(
      repeat($._stmt),
      $._dedent,
    ),

    dotted_name: $ => prec.left(1, sep1($.identifier, choice('?.', '.',))),

    // Patterns

    _expr: $ => prec(1, choice(
      $.if_expr,
      $._simple_expr,
    )),

    _simple_expr: $ => prec(1, choice(
      $.binary_expr,
      $.comparison_expr,
      $.logic_expr,
      $.primary_expr,
      $.as_expr,
    )),

    selector_expr: $ => prec.left(PREC.call, seq(
      $.primary_expr,
      $.select_suffix,
    )),

    config_expr: $ => seq(
      '{',
      optional(choice(
        $.config_entries,
        seq(
          '\n',
          optional($.config_entries)
        )
      )),
      '}'
    ),

    config_entries: $ => seq(
      $.config_entry,
      repeat(seq(
        choice(
          ',',
          seq(
            optional(','),
            '\n'
          )
        ),
        $.config_entry
      )),
      optional(','),
      optional('\n')
    ),

    config_entry: $ => choice(
      seq(
        $._expr,
        field('operator', choice(':', '=', '+=')),
        $._expr
      ),
      $.config_splat,
      $.if_entry,
      $.config_shorthand
    ),

    // ES6-style shorthand: a bare identifier entry stands for `key = key`
    // (https://github.com/kcl-lang/kcl/issues/1275). Only single-segment
    // identifiers are allowed; dotted keys like `{a.b}` remain a parse
    // error so key-flattening keeps its current semantics.
    config_shorthand: $ => field('name', $.identifier),

    unary_expr: $ => prec(PREC.prefix, seq(
      field('operator', choice('+', '-', '~', 'not')),
      field('argument', $._simple_expr),
    )),

    comparison_expr: $ => prec.left(2, seq(
      choice($._simple_expr),
      repeat1(seq(
        field('operators',
          choice(
            '<',
            '<=',
            '==',
            '!=',
            '>=',
            '>',
            'in',
            alias(seq('not', 'in'), 'not in'),
            'is',
            alias(seq('is', 'not'), 'is not'),
            'and',
            'or',
          )),
        $.primary_expr,
      )),
    )),

    assign_stmt: $ => seq(
      field('left', $.dotted_name),
      choice(
        seq('=', field('right', $._expr)),
        seq(':', field('type', $.type), '=', field('right', $._expr)),
        alias(seq(':', field('type', $.type)), 'null_assignment'),
      ),
    ),

    unification_stmt: $ => seq(
      field('left', $.dotted_name),
      ':',
      field('right', $.schema_expr),
    ),

    select_suffix: $ => prec(44, choice(
      seq('.', $.identifier),
      seq('?.', $.identifier)
    )),

    optional_attribute_declaration: $ => prec.right(12, seq(
      field('attribute', $.identifier),
      '?:',
      field('type', $.type),
      optional(seq(
        '=',
        field('default', $._expr)
      ))
    )),

    subscript_expr: $ => prec(PREC.call, seq(
      field('value', $.primary_expr),
      optional('?'),
      '[',
      commaSep1(field('subscript', choice($._expr, $.slice))),
      optional(','),
      ']',
    )),

    call_expr: $ => prec(PREC.call, seq(
      field('function', $.primary_expr),
      field('arguments', $.argument_list),
    )),

    type: $ => choice(
      $.schema_type,
      $.union_type,
      $.function_type,
      $.basic_type,
      $.list_type,
      $.dict_type,
      $.literal_type,
    ),
    schema_type: $ => $.dotted_name,
    basic_type: _ => choice('str', 'int', 'float', 'bool', 'any'),
    list_type: $ => prec.left(seq('[', optional($.type), ']')),
    dict_type: $ => prec.left(seq('{', optional($.type), ':', optional($.type), '}')),
    list_expr: $ => seq(
      '[',
      optional($._collection_elements),
      ']',
    ),

    _collection_elements: $ => prec(1, commaSep1(choice(
      $._expr, $.list_splat,
    ))),

    string: $ => seq(
      $.string_start,
     repeat(choice($.interpolation, $.string_content)),
      $.string_end,
    ),

    string_content: $ => prec.right(repeat1(
      choice(
        $.escape_sequence,
        $._not_escape_sequence,
        $._string_content,
      ))),

    _not_escape_sequence: _ => token.immediate('\\'),

    integer: $ => token(choice(
      seq(
        choice('0x', '0X'),
        repeat1(/_?[A-Fa-f0-9]+/),
      ),
      seq(
        choice('0o', '0O'),
        repeat1(/_?[0-7]+/),
      ),
      seq(
        choice('0b', '0B'),
        repeat1(/_?[0-1]+/),
      ),
      seq(
        repeat1(/[0-9]+_?/),
        field('multiplier', optional(choice(NUMBER_SUFFIX.n, NUMBER_SUFFIX.u, NUMBER_SUFFIX.m, NUMBER_SUFFIX.k, NUMBER_SUFFIX.K, NUMBER_SUFFIX.M, NUMBER_SUFFIX.G, NUMBER_SUFFIX.T, NUMBER_SUFFIX.P, NUMBER_SUFFIX.Ki, NUMBER_SUFFIX.Mi, NUMBER_SUFFIX.Gi, NUMBER_SUFFIX.Ti, NUMBER_SUFFIX.Pi))),
      ),
    )),

    identifier: _ => /[_$a-zA-Z][_$\p{XID_Continue}]*/,

    true: _ => NAME_CONSTANTS.TRUE,
    false: _ => NAME_CONSTANTS.FALSE,
    none: _ => NAME_CONSTANTS.NONE,
    comment: _ => token(seq('#', /.*/)),
