test/corpus/assign.txt
================================================================================
assign statements
================================================================================

k = 1

--------------------------------------------------------------------------------

(module
  (expression_statement
    (assignment
      (dotted_name
        (identifier))
      (integer))))

================================================================================
assign statements with select dots
================================================================================

a.b = "a.b"

--------------------------------------------------------------------------------

(module
  (expression_statement
    (assignment
      (dotted_name
        (identifier)
        (identifier))
      (string
        (string_start)
        (string_content)
        (string_end)))))

================================================================================
augmented assign statements
================================================================================

k += 1

--------------------------------------------------------------------------------

(module
  (expression_statement
    (augmented_assignment
      (dotted_name
        (identifier))
      (integer))))
