test/corpus/expr.txt
================================================================================
binary expression
================================================================================

1 ** 2 + 2 * 3

--------------------------------------------------------------------------------

(module
  (binary_operator
    (binary_operator
      (integer)
      (integer))
    (binary_operator
      (integer)
      (integer))))
