test/corpus/import.txt
================================================================================
import statements
================================================================================

import k8s.api

--------------------------------------------------------------------------------

(module
  (import_statement
    (dotted_name
      (identifier)
      (identifier))))

================================================================================
import statements with leading dot
================================================================================

import ..local.api

--------------------------------------------------------------------------------

(module
  (import_statement
    (import_prefix)
    (dotted_name
      (identifier)
      (identifier))))

================================================================================
import statements with as name
================================================================================

import k8s.api as k8s

--------------------------------------------------------------------------------

(module
  (import_statement
    (aliased_import
      (dotted_name
        (identifier)
        (identifier))
      (identifier))))

================================================================================
import statements with as name and leading dots
================================================================================

import ..local.api as local

--------------------------------------------------------------------------------

(module
  (import_statement
    (import_prefix)
    (aliased_import
      (dotted_name
        (identifier)
        (identifier))
      (identifier))))
