test/corpus/schema.txt
================================================================================
Schema Statement
================================================================================

schema Person:
    firstName: str = "John"

--------------------------------------------------------------------------------

(module
  (schema_stmt
    (identifier)
    (block
      (assign_stmt
        (dotted_name
          (identifier))
        (type
          (basic_type))
        (string
          (string_start)
          (string_content)
          (string_end))))))

================================================================================
Protocol Statement
================================================================================

protocol DataProtocol:
    data: str

--------------------------------------------------------------------------------

(module
  (protocol_stmt
    (identifier)
    (block
      (assign_stmt
        (dotted_name
          (identifier))
        (basic_type)))))

================================================================================
Rule Statement
================================================================================

rule SomeRule:
    age > 0, "rule check failure message"

--------------------------------------------------------------------------------

(module
  (rule_stmt
    (identifier)
    (block
      (if_stmt
        (comparison_expr
          (identifier)
          (integer))
        (string
          (string_start)
          (string_content)
          (string_end))))))

================================================================================
Schema Statement with Check
================================================================================

schema Config:
    volumes: [{str:}]
    services: [{str:}]
    check:
        all service in services {
            service.clusterIP == "NONE" 
        }, "invalid cluster ip"

        any volume in volumes {
            volume.mountPath in ["/home/admin", "/home/myapp"]
        }

--------------------------------------------------------------------------------

(module
  (schema_stmt
    (identifier)
    (block
      (assign_stmt
        (dotted_name
          (identifier))
        (list_type
          (type
            (dict_type
              (type
                (basic_type))))))
      (assign_stmt
        (dotted_name
          (identifier))
        (list_type
          (type
            (dict_type
              (type
                (basic_type))))))
      (check_stmt
        (quant_expr
          (quant_op)
          (identifier)
          (quant_target
            (identifier))
          (comparison_expr
            (selector_expr
              (identifier)
              (select_suffix
                (identifier)))
            (string
              (string_start)
              (string_content)
              (string_end))))
        (string
          (string_start)
          (string_content)
          (string_end)))
      (quant_expr
        (quant_op)
        (identifier)
        (quant_target
          (identifier))
        (comparison_expr
          (selector_expr
            (identifier)
            (select_suffix
              (identifier)))
          (list_expr
            (string
              (string_start)
              (string_content)
              (string_end))
            (string
              (string_start)
              (string_content)
              (string_end))))))))

================================================================================
Decorated of a schema
================================================================================

@deprecated
schema ObsoleteSchema:
    attr: str

--------------------------------------------------------------------------------

(module
  (decorators
    (decorator
      (identifier))
    (schema_stmt
      (identifier)
      (block
        (assign_stmt
          (dotted_name
            (identifier))
          (basic_type))))))

================================================================================
Schema Kwargs
================================================================================

personA = Person() {}

--------------------------------------------------------------------------------

(module
  (assign_stmt
    (dotted_name
      (identifier))
    (schema_instantiation
      (call_expr
        (identifier)
        (argument_list))
      (config_expr))))

================================================================================
Unification Statement
================================================================================

personInstance : Person {name: "Alice"}

--------------------------------------------------------------------------------

(module
  (unification_stmt
    (dotted_name
      (identifier))
    (schema_expr
      (identifier)
      (config_expr
        (config_entries
          (config_entry
            (identifier)
            (string
              (string_start)
              (string_content)
              (string_end))))))))

================================================================================
Schema Index Signature
================================================================================

schema Map:
    """
    Map is a schema with a key of str type and a value of str type
    """
    [str]: str  # `{attr_alias}` can be omitted.

--------------------------------------------------------------------------------

(module
  (schema_stmt
    (identifier)
    (block
      (string
        (string_start)
        (string_content)
        (string_end))
      (schema_index_signature
        (basic_type)
        (type
          (basic_type))
        (comment)))))

================================================================================
Schema Index Signature with Check Block
================================================================================

schema Data:
    [data: str]: str
    check:
        data in ["Alice", "Bob"]

data = Data {
    Alice = "10"
    Bob = "12"
}

--------------------------------------------------------------------------------

(module
  (schema_stmt
    (identifier)
    (block
      (schema_index_signature
        (identifier)
        (basic_type)
        (type
          (basic_type)))
      (check_stmt
        (comparison_expr
          (identifier)
          (list_expr
            (string
              (string_start)
              (string_content)
              (string_end))
            (string
              (string_start)
              (string_content)
              (string_end)))))))
  (assign_stmt
    (dotted_name
      (identifier))
    (schema_expr
      (identifier)
      (config_expr
        (config_entries
          (config_entry
            (identifier)
            (string
              (string_start)
              (string_content)
              (string_end)))
          (config_entry
            (identifier)
            (string
              (string_start)
              (string_content)
              (string_end))))))))

================================================================================
Schema index signature attribute alias
================================================================================

schema Environment:
    [id: str]: EnvironmentSpec = {
        fullName = id
    }

--------------------------------------------------------------------------------

(module
  (schema_stmt
    (identifier)
    (block
      (schema_index_signature
        (identifier)
        (basic_type)
        (type
          (schema_type
            (dotted_name
              (identifier))))
        (config_expr
          (config_entries
            (config_entry
              (identifier)
              (identifier))))))))

================================================================================
Schema index signature attribute alias
================================================================================

schema employee(person):
    bankCard: int
    gender: str

--------------------------------------------------------------------------------

(module
  (schema_stmt
    (identifier)
    (identifier)
    (block
      (assign_stmt
        (dotted_name
          (identifier))
        (basic_type))
      (assign_stmt
        (dotted_name
          (identifier))
        (basic_type)))))

================================================================================
Rule Statement with any condition
================================================================================

rule SomeChecker for SomeProtocol:
    id > 0, "id must >0"

    any service in services {
        service.clusterIP == "NONE" if service.type
    }
   
--------------------------------------------------------------------------------

(module
  (rule_stmt
    (identifier)
    (identifier)
    (block
      (if_stmt
        (comparison_expr
          (identifier)
          (integer))
        (string
          (string_start)
          (string_content)
          (string_end)))
      (quant_expr
        (quant_op)
        (identifier)
        (quant_target
          (identifier))
        (comparison_expr
          (selector_expr
            (identifier)
            (select_suffix
              (identifier)))
          (string
            (string_start)
            (string_content)
            (string_end)))
        (selector_expr
          (identifier)
          (select_suffix
            (identifier)))))))

================================================================================
Rule Statement with inheritance
================================================================================

rule Main(IsSunny, IsWednesday):
    id == 1

--------------------------------------------------------------------------------

(module
  (rule_stmt
    name: (identifier)
    base: (identifier)
    base: (identifier)
    body: (block
      (comparison_expr
        (identifier)
        (integer)))))

================================================================================
Schema Mixin Statement
================================================================================

schema Parent:
    mixin [NameMixin]
    age: int
   
--------------------------------------------------------------------------------

(module
  (schema_stmt
    (identifier)
    (block
      (mixin_stmt
        (list_expr
          (identifier)))
      (assign_stmt
        (dotted_name
          (identifier))
        (basic_type)))))

================================================================================
Schema Statement with checks
================================================================================

schema NameMixin:
  check:
    name None
   
--------------------------------------------------------------------------------

(module
  (schema_stmt
    (identifier)
    (block
      (check_stmt
        (identifier))
      (none))))

================================================================================
Schema Statement with Data
================================================================================

schema Data for DataProtocol:
    x: str = data
   
--------------------------------------------------------------------------------

(module
  (schema_stmt
    (identifier)
    (identifier)
    (block
      (assign_stmt
        (dotted_name
          (identifier))
        (type
          (basic_type))
        (identifier)))))

================================================================================
schema config
================================================================================

schema Config:
    x?: int = 1
    y ?: str = "s"

--------------------------------------------------------------------------------

(module
  (schema_stmt
    (identifier)
    (block
      (optional_attribute_declaration
        (identifier)
        (type
          (basic_type))
        (integer))
      (optional_attribute_declaration
        (identifier)
        (type
          (basic_type))
        (string
          (string_start)
          (string_content)
          (string_end))))))

================================================================================
Rule Structure
================================================================================

rule SomeChecker for SomeProtocol:
  id > 0, "id must >0"

  any volume in volumes {
    volume.mountPath in ["/home/admin", "/home/myapp"]
  }

--------------------------------------------------------------------------------

(module
  (rule_stmt
    (identifier)
    (identifier)
    (block
      (if_stmt
        (comparison_expr
          (identifier)
          (integer))
        (string
          (string_start)
          (string_content)
          (string_end)))
      (quant_expr
        (quant_op)
        (identifier)
        (quant_target
          (identifier))
        (comparison_expr
          (selector_expr
            (identifier)
            (select_suffix
              (identifier)))
          (list_expr
            (string
              (string_start)
              (string_content)
              (string_end))
            (string
              (string_start)
              (string_content)
              (string_end))))))))

================================================================================
Check with Config Parameter
================================================================================

SomeChecker {
  id = 1
  env = {
    MY_ENV = "MY_ENV_VALUE"
  }
  services = [
    {
        type = "ClusterIP"
        clusterIp = "NONE"
    }
  ]
  volumes = [
    {
        mountPath = "/home/admin"
    },
    {
        mountPath = "/home/myapp"
    }
  ]
}

--------------------------------------------------------------------------------

(module
  (schema_expr
    (identifier)
    (config_expr
      (config_entries
        (config_entry
          (identifier)
          (integer))
        (config_entry
          (identifier)
          (config_expr
            (config_entries
              (config_entry
                (identifier)
                (string
                  (string_start)
                  (string_content)
                  (string_end))))))
        (config_entry
          (identifier)
          (list_expr
            (config_expr
              (config_entries
                (config_entry
                  (identifier)
                  (string
                    (string_start)
                    (string_content)
                    (string_end)))
                (config_entry
                  (identifier)
                  (string
                    (string_start)
                    (string_content)
                    (string_end)))))))
        (config_entry
          (identifier)
          (list_expr
            (config_expr
              (config_entries
                (config_entry
                  (identifier)
                  (string
                    (string_start)
                    (string_content)
                    (string_end)))))
            (config_expr
              (config_entries
                (config_entry
                  (identifier)
                  (string
                    (string_start)
                    (string_content)
                    (string_end)))))))))))

================================================================================
Multiplexing Rule Statement
================================================================================


rule Allow:
  UserIsAdmin()
  any grant in UserIsGranted() {
      input.action == grant.action
  }

rule UserIsAdmin:
  any user in data.user_roles[input.user] {
      user == "admin"
  }

--------------------------------------------------------------------------------

(module
  (rule_stmt
    (identifier)
    (block
      (call_expr
        (identifier)
        (argument_list))
      (quant_expr
        (quant_op)
        (identifier)
        (quant_target
          (call_expr
            (identifier)
            (argument_list)))
        (comparison_expr
          (selector_expr
            (identifier)
            (select_suffix
              (identifier)))
          (selector_expr
            (identifier)
            (select_suffix
              (identifier)))))))
  (rule_stmt
    (identifier)
    (block
      (quant_expr
        (quant_op)
        (identifier)
        (quant_target
          (subscript_expr
            (selector_expr
              (identifier)
              (select_suffix
                (identifier)))
            (selector_expr
              (identifier)
              (select_suffix
                (identifier)))))
        (comparison_expr
          (identifier)
          (string
            (string_start)
            (string_content)
            (string_end)))))))

================================================================================
schema with multiple keywords
================================================================================

schema NameMixin:
    check:
        name is not None

schema Person:
    """
    Person schema definition
    """
    mixin [NameMixin]

    name: str = "Alice"
    age: int

person = Person {
    age = 18
}

--------------------------------------------------------------------------------

(module
  (schema_stmt
    (identifier)
    (block
      (check_stmt
        (comparison_expr
          (identifier)
          (unary_expr
            (none))))))
  (schema_stmt
    (identifier)
    (block
      (string
        (string_start)
        (string_content)
        (string_end))
      (mixin_stmt
        (list_expr
          (identifier)))
      (assign_stmt
        (dotted_name
          (identifier))
        (type
          (basic_type))
        (string
          (string_start)
          (string_content)
          (string_end)))
      (assign_stmt
        (dotted_name
          (identifier))
        (basic_type))))
  (assign_stmt
    (dotted_name
      (identifier))
    (schema_expr
      (identifier)
      (config_expr
        (config_entries
          (config_entry
            (identifier)
            (integer)))))))

================================================================================
Schema Expression Shorthand Entries
================================================================================

p = Person { name, age }

--------------------------------------------------------------------------------

(module
  (assign_stmt
    (dotted_name
      (identifier))
    (schema_expr
      (identifier)
      (config_expr
        (config_entries
          (config_entry
            (config_shorthand
              (identifier)))
          (config_entry
            (config_shorthand
              (identifier))))))))
